--- a/less/style.less
+++ b/less/style.less
@@ -30,6 +30,11 @@ body {
     background-color: @bg-darkgray;
 }
 
+.inner-page {
+    color: #000;
+    background-color: #f8f5f2;
+}
+
 @media (min-width: @tablet-width) {
     body {
         background-color: #353535;
@@ -97,3 +102,4 @@ button:visited {
 @import "news.less";
 @import "reviews.less";
 @import "footer.less";
+@import "our-works/photogallery.less";
