--- a/less/header-main.less
+++ b/less/header-main.less
@@ -7,6 +7,7 @@
     display: flex;
     margin: 0 auto;
     flex-direction: column;
+    background-color: #242424;
 }
 
 .header-main__logo-link {
