--- a/css/header-main.css
+++ b/css/header-main.css
@@ -11,6 +11,12 @@
   width: 226px;
   height: 30px;
 }
+.inner-page .header-main {
+  position: relative;
+}
+.inner-page .bg-cutter {
+  display: none;
+}
 @media (min-width: 768px) {
   .header-main {
     background-color: #000;
@@ -28,6 +34,15 @@
     margin: 0 auto;
     margin-top: 40px;
   }
+  .inner-page .header-main__logo-link {
+    height: 210px;
+  }
+  .inner-page .bg-cutter {
+    position: absolute;
+    display: block;
+    width: 100%;
+    bottom: 0;
+  }
 }
 @media (min-width: 1200px) {
   .header-main__logo-link {
@@ -37,5 +52,8 @@
   }
   .header-main__logo-link img {
     margin-top: 57px;
+  }
+  .inner-page .header-main__logo-link {
+    height: 305px;
   }
 }
