--- a/less/style.less
+++ b/less/style.less
@@ -46,6 +46,10 @@ img {
     height: auto;
 }
 
+.news svg {
+    height: 42px;
+}
+
 .visually-hidden:not(:focus):not(:active) {
     position: absolute;
     width: 1px;
@@ -103,3 +107,4 @@ button:visited {
 @import "reviews.less";
 @import "footer.less";
 @import "our-works/photogallery.less";
+@import "our-works/price-list.less";
