--- a/css/price-list.css
+++ b/css/price-list.css
@@ -122,7 +122,13 @@
   }
 }
 @media (min-width: 1200px) {
+  .price-list {
+    padding-bottom: 88px;
+  }
   .price-list__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     width: 80%;
     max-width: 960px;
     padding-top: 79px;
@@ -131,12 +137,31 @@
     display: none;
   }
   .price-list__title {
+    width: 100%;
+    height: 50px;
     margin: 0;
   }
   .price-list__listing {
     width: 66.66%;
+    margin-right: 50px;
   }
   .price-list__listing td {
     padding: 15px;
+  }
+  .price-list__discount {
+    width: 269px;
+    margin: 0;
+    margin-top: 43px;
+    padding: 204px 73px 0;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+  }
+  .price-list__discount::before {
+    top: 35px;
+    left: 64px;
+    width: 142px;
+    height: 139px;
+    transform: none;
   }
 }
