--- a/less/style.less
+++ b/less/style.less
@@ -108,3 +108,4 @@ button:visited {
 @import "footer.less";
 @import "our-works/photogallery.less";
 @import "our-works/price-list.less";
+@import "recording/recording.less";
