--- a/css/recording.css
+++ b/css/recording.css
@@ -3,15 +3,20 @@
   margin: 0 auto;
 }
 .recording__form-title {
+  display: block;
   margin: 0;
-  margin-top: 30px;
+  margin-bottom: 26px;
   font-size: 30px;
   line-height: 30px;
+  font-weight: bold;
   text-transform: uppercase;
   text-align: center;
 }
+.recording__button {
+  display: none;
+}
 .recording__form-details {
-  margin-top: 26px;
+  margin-top: 30px;
   padding: 0;
   border: none;
 }
@@ -24,6 +29,9 @@
   font-size: 18px;
   border: 1px solid #e5ddd5;
 }
+.recording-field-surname {
+  margin-top: 0;
+}
 .contact-details__recording-field:hover,
 .contact-details__recording-field:focus {
   border: 1px solid #d5c9bd;
@@ -34,7 +42,7 @@
 .contact-details__recording-field::placeholder {
   color: #000;
 }
-.contact-details__recording-field.recording__field--patronymic {
+.recording__field--patronymic {
   margin-top: 32px;
 }
 .recording__field--extra-info {
@@ -46,10 +54,73 @@
 @media (min-width: 768px) {
   .recording {
     width: 84%;
-    max-width: 960px;
+  }
+  .contact-details {
+    margin-top: 54px;
+  }
+  .contact-details__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
   .recording__form-title {
-    margin-top: 59px;
+    width: 52%;
+    margin-top: 5px;
+    margin-bottom: 69px;
+    font-size: 40px;
+    line-height: 40px;
     text-align: left;
+  }
+  .recording__button {
+    display: block;
+  }
+  .contact-details__recording-field {
+    flex-grow: 1;
+    flex-shrink: 0;
+    height: 70px;
+    margin-top: 35px;
+    padding: 0 25px;
+  }
+  .contact-details__recording-field:nth-child(3),
+  .contact-details__recording-field:nth-child(5),
+  .contact-details__recording-field:nth-child(7) {
+    width: 33.33%;
+    margin-top: 0;
+  }
+  .contact-details__recording-field:nth-child(5),
+  .contact-details__recording-field:nth-child(7) {
+    border-left: none;
+  }
+  .recording__field--extra-info {
+    height: 211px;
+    padding: 22px 25px;
+  }
+}
+@media (min-width: 1200px) {
+  .recording {
+    width: 80%;
+    max-width: 960px;
+  }
+  .contact-details__recording-field:nth-child(3),
+  .contact-details__recording-field:nth-child(5),
+  .contact-details__recording-field:nth-child(7) {
+    width: 30.7%;
+    margin-top: 0;
+    margin-right: 37px;
+  }
+  .contact-details__recording-field:nth-child(7) {
+    margin-right: 0;
+  }
+  .contact-details__recording-field:nth-child(5),
+  .contact-details__recording-field:nth-child(7) {
+    border-left: 1px solid #e5ddd5;
+  }
+  .contact-details__recording-field:nth-child(9),
+  .contact-details__recording-field:nth-child(11) {
+    width: 48.1%;
+    margin-right: 35px;
+  }
+  .contact-details__recording-field:nth-child(11) {
+    margin-right: 0;
   }
 }
