--- a/less/recording/recording.less
+++ b/less/recording/recording.less
@@ -9,16 +9,22 @@
 }
 
 .recording__form-title {
+    display: block;
     margin: 0;
-    margin-top: 30px;
+    margin-bottom: 26px;
     font-size: 30px;
     line-height: 30px;
+    font-weight: bold;
     text-transform: uppercase;
     text-align: center;
 }
 
+.recording__button {
+    display: none;
+}
+
 .recording__form-details {
-    margin-top: 26px;
+    margin-top: 30px;
     padding: 0;
     border: none;
 }
@@ -31,6 +37,10 @@
     box-sizing: border-box;
     font-size: 18px;
     border: 1px solid #e5ddd5;
+}
+
+.recording-field-surname {
+    margin-top: 0;
 }
 
 .contact-details__recording-field:hover,
@@ -46,7 +56,7 @@
     color: #000;;
 }
 
-.contact-details__recording-field.recording__field--patronymic {
+.recording__field--patronymic {
     margin-top: 32px;
 }
 
@@ -60,11 +70,87 @@
 @media (min-width: @tablet-width) {
     .recording {
         width: 84%;
-        max-width: 960px;
+    }
+
+    .contact-details {
+        margin-top: 54px;
+    }
+    
+    .contact-details__wrapper {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
     }
     
     .recording__form-title {
-        margin-top: 59px;
+        width: 52%;
+        margin-top: 5px;
+        margin-bottom: 69px;
+        font-size: 40px;
+        line-height: 40px;
         text-align: left;
+    }
+
+    .recording__button {
+        display: block;
+    }
+
+    .contact-details__recording-field  {
+        flex-grow: 1;
+        flex-shrink: 0;
+        height: 70px;
+        margin-top: 35px;
+        padding: 0 25px;
+    }
+
+    .contact-details__recording-field:nth-child(3),
+    .contact-details__recording-field:nth-child(5),
+    .contact-details__recording-field:nth-child(7) {
+        width: 33.33%;
+        margin-top: 0;
+    }
+
+    .contact-details__recording-field:nth-child(5),
+    .contact-details__recording-field:nth-child(7) {
+        border-left: none;
+    }
+
+    .recording__field--extra-info {
+        height: 211px;
+        padding: 22px 25px;
+    }
+}
+
+    @media (min-width: @desktop-width) {
+    .recording {
+        width: 80%;
+        max-width: 960px;
+    }
+
+    .contact-details__recording-field:nth-child(3),
+    .contact-details__recording-field:nth-child(5),
+    .contact-details__recording-field:nth-child(7) {
+        width: 30.7%;
+        margin-top: 0;
+        margin-right: 37px;
+    }
+
+    .contact-details__recording-field:nth-child(7) {
+        margin-right: 0;
+    }
+
+    .contact-details__recording-field:nth-child(5),
+    .contact-details__recording-field:nth-child(7) {
+        border-left: 1px solid #e5ddd5;
+    }
+
+    .contact-details__recording-field:nth-child(9),
+    .contact-details__recording-field:nth-child(11) {
+        width: 48.1%;
+        margin-right: 35px;
+    }
+
+    .contact-details__recording-field:nth-child(11) {
+        margin-right: 0;
     }
 }
