--- a/less/style.less
+++ b/less/style.less
@@ -50,7 +50,7 @@ img {
     height: 42px;
 }
 
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -109,3 +109,4 @@ button:visited {
 @import "our-works/photogallery.less";
 @import "our-works/price-list.less";
 @import "recording/recording.less";
+@import "recording//beard-model.less";
