полный барбершоп без карусели + мелкие недоработки

--- a/less/style.less
+++ b/less/style.less
@@ -110,3 +110,4 @@ button:visited {
 @import "our-works/price-list.less";
 @import "recording/recording.less";
 @import "recording//beard-model.less";
+@import "recording/add-services.less";
