--- a/less/recording/beard-model.less
+++ b/less/recording/beard-model.less
@@ -57,6 +57,23 @@
     box-sizing: border-box;
 }
 
+.recoding__radio:hover + label::before {
+    border: 1px solid #d5c9bd;
+}
+
+.recoding__radio:focus + label::before {
+    border: 1px solid #d5c9bd;
+    outline: 5px auto -webkit-focus-ring-color;
+}
+
+.recoding__radio + label:active::before {
+    top: 16px;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #e5ddd5;
+    box-shadow: 0 0 0 16px #d5c9bd;
+}
+
 .recoding__radio:checked + label::before {
     top: 16px;
     width: 18px;
@@ -77,5 +94,88 @@
     width: 52px;
     height: 49px;
     background-image: url(../../img/beard-admiral.png);
-    background-repeat: no-repeat;
 }
+
+.beard-model--lumberjack label::after {
+    width: 58px;
+    height: 68px;
+    background-image: url(../../img/beard-lumberjack.png);
+}
+
+.beard-model--polar-explorer label::after {
+    width: 64px;
+    height: 78px;
+    background-image: url(../../img/beard-polar-explorer.png);
+}
+
+.beard-model--boyar label::after {
+    width: 58px;
+    height: 98px;
+    background-image: url(../../img/beard-boyar.png);
+}
+
+.beard-model--sage label::after {
+    width: 46px;
+    height: 105px;
+    background-image: url(../../img/beard-sage.png);
+}
+
+@media (min-width: @tablet-width) {
+    .beard-model__title {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        font-size: 30px;
+        line-height: 30px;
+
+        &::before,
+        &::after {
+            content: "";
+            flex-grow: 1;
+            flex-shrink: 0;
+            width: 100px;
+            height: 1px;
+            background-color: #e5ddd5;
+        }
+
+        &::before {
+            margin-right: 25px;
+        }
+
+        &::after {
+            margin-left: 25px;
+        }
+    }
+
+    .beard-model {
+        margin-top: 55px;
+    }
+
+    .beard-model__list {
+        justify-content: space-around;
+        margin-top: 41px;
+    }
+    
+    .beard-model__item {
+        margin-top: 0;
+        width: auto;
+    }
+}
+
+@media (min-width: @desktop-width) {
+    .beard-model {
+        margin-top: 70px;
+    }
+
+    .beard-model__title::before {
+        margin-right: 40px;
+    }
+
+    .beard-model__title::after {
+        margin-left: 40px;
+    }
+
+    .beard-model__list {
+        margin-top: 47px;
+    }
+}   
