--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body {
   color: #000;
   background-color: #f8f5f2;
 }
+svg {
+  margin-top: -1px;
+}
 @media (min-width: 768px) {
   body {
     background-color: #353535;
@@ -77,6 +80,20 @@ button:visited {
   color: rgba(0, 0, 0, 0.3);
   background-color: #d5c9bd;
   border: 1px solid #d5c9bd;
+}
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+  50% {
+    transform: translateY(30px);
+  }
+  90% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 .nav-main {
   position: relative;
@@ -2208,6 +2225,9 @@ button:visited {
   border: 1px solid #d5c9bd;
   outline: 5px auto -webkit-focus-ring-color;
 }
+.recording__checkbox:active + label::before {
+  background-color: #d5c9bd;
+}
 .recording__checkbox:checked + label::after {
   content: "";
   position: absolute;
@@ -2225,6 +2245,9 @@ button:visited {
   color: #fff;
   background-color: #826550;
   line-height: 24px;
+}
+.recording__button--submit:hover {
+  background-color: #6a4d38;
 }
 .inner-page .form-footer__svg polygon {
   fill: #f8f5f2;
@@ -2279,6 +2302,12 @@ button:visited {
   }
 }
 @media (min-width: 1200px) {
+  .add-services__title::before {
+    margin-right: 40px;
+  }
+  .add-services__title::after {
+    margin-left: 40px;
+  }
   .extra-services__list {
     margin-top: 65px;
   }
@@ -2317,5 +2346,159 @@ button:visited {
   .recording__button--submit {
     margin-top: 84px;
     margin-bottom: 87px;
+  }
+}
+.personal-account {
+  display: none;
+  position: absolute;
+  top: 135px;
+  width: 100%;
+  min-width: 320px;
+  z-index: 11;
+  color: #000000;
+  background-color: #f8f5f2;
+  box-shadow: 0 50px 30px rgba(0, 1, 1, 0.75);
+}
+.modal-show {
+  display: block;
+  animation: bounce 0.6s;
+}
+.personal-account__wrapper {
+  width: 87.5%;
+  margin: 0 auto;
+}
+.modal__title {
+  margin: 0;
+  margin-top: 33px;
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.modal__explanation {
+  margin: 0;
+  margin-top: 15px;
+  text-align: center;
+}
+.modal__form {
+  margin-top: 25px;
+}
+.modal__input {
+  margin: 0;
+  margin-top: 6px;
+}
+.modal__input:first-child {
+  margin-top: 0;
+}
+.modal__user,
+.modal__password {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  border: 1px solid #e5ddd5;
+  padding: 0 53px 0 18px;
+}
+.modal__user {
+  background-image: url(../img/login-user.png);
+  background-repeat: no-repeat;
+  background-position: right 18px center;
+}
+.modal__password {
+  background-image: url(../img/login-password.png);
+  background-repeat: no-repeat;
+  background-position: right 18px center;
+}
+.modal__user::placeholder,
+.modal__password::placeholder {
+  color: #000000;
+}
+.modal__login-info {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  margin-top: 35px;
+  line-height: 30px;
+}
+.modal__checkbox-indicator {
+  position: relative;
+  padding-left: 48px;
+}
+.modal__checkbox + .modal__checkbox-indicator::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 33px;
+  height: 33px;
+  background-color: #fff;
+  border: 1px solid #e5ddd5;
+  box-sizing: border-box;
+}
+.modal__checkbox:checked + .modal__checkbox-indicator::after {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 6px;
+  width: 22px;
+  height: 16px;
+  background-image: url(../img/checkbox.png);
+  background-repeat: no-repeat;
+}
+.modal__restore,
+.modal__restore:link,
+.modal__restore:visited,
+.modal__restore:active {
+  color: #000000;
+}
+.modal__wrapper-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+  margin-bottom: 32px;
+}
+.modal__enter,
+.modal__close {
+  width: 46.43%;
+}
+.modal__enter {
+  color: #fff;
+  background-color: #826550;
+}
+.modal__enter:hover {
+  background-color: #6a4d38;
+}
+.modal__close {
+  background-color: transparent;
+  border: 1px solid #e5ddd5;
+}
+@media (min-width: 768px) {
+  .personal-account {
+    position: fixed;
+    width: 460px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+  }
+  .personal-account__wrapper {
+    width: 320px;
+  }
+  .modal__title {
+    margin-top: 54px;
+    font-size: 40px;
+    line-height: 40px;
+  }
+  .modal__user,
+  .modal__password {
+    height: 70px;
+  }
+  .modal__enter,
+  .modal__close {
+    width: 150px;
+  }
+  .modal__wrapper-buttons {
+    width: 100%;
+    margin-bottom: 57px;
   }
 }
