--- a/css/nav-main.css
+++ b/css/nav-main.css
@@ -72,6 +72,9 @@
   margin: 0 auto;
   padding: 29px 0 26px 0;
 }
+.user-list__login-icon {
+  fill: #fff;
+}
 .nav-main--closed .nav-main__toggle {
   position: absolute;
   top: 0;
@@ -163,7 +166,7 @@
   height: 16px;
   opacity: 0.3;
 }
-.user-list__login-icon polygon {
+.user-list__login:hover .user-list__login-icon {
   fill: #fff;
 }
 @media (min-width: 768px) {
@@ -321,5 +324,8 @@
   }
   .user-list__login-icon {
     left: 15px;
+  }
+  .user-list__login:hover .user-list__login-icon {
+    fill: #000;
   }
 }
