--- a/less/header-main.less
+++ b/less/header-main.less
@@ -16,9 +16,10 @@
     text-align: center;
 }
 
-.header-main__logo-header img {
+.header-main__logo-link img {
     width: 226px;
     height: 30px;
+    margin-top: 0;
 }
 
 .inner-page .header-main {
@@ -53,7 +54,7 @@
         margin: 0 auto;
         margin-top: 40px;
     }
-    
+
     .inner-page .header-main__logo-link {
         height: 210px;
     }
