--- a/css/style.css
+++ b/css/style.css
@@ -1591,7 +1591,7 @@ button:visited {
 .service-haircut::before {
   width: 21px;
   height: 20px;
-  background-image: url(../../img/service-haircut.png);
+  background-image: url(../img/service-haircut.png);
   left: 0;
   top: 50%;
   transform: translateY(-50%);
@@ -1599,7 +1599,7 @@ button:visited {
 .service-shaving::before {
   width: 23px;
   height: 20px;
-  background-image: url(../../img/service-shaving.png);
+  background-image: url(../img/service-shaving.png);
   left: 0px;
   top: 50%;
   transform: translateY(-50%);
@@ -1607,7 +1607,7 @@ button:visited {
 .service-mustache::before {
   width: 45px;
   height: 12px;
-  background-image: url(../../img/service-mustache.png);
+  background-image: url(../img/service-mustache.png);
   left: -12px;
   top: 50%;
   transform: translateY(-50%);
@@ -1680,7 +1680,7 @@ button:visited {
     height: 480px;
   }
   .photogallery__work-of-the-month {
-    background-image: url(../../img/label-desktop.png);
+    background-image: url(../img/label-desktop.png);
     top: 25px;
     right: -480px;
   }
@@ -1801,7 +1801,7 @@ button:visited {
   width: 58px;
   height: 57px;
   transform: translateY(-50%);
-  background-image: url("../../img/clock.png");
+  background-image: url("../img/clock.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -2122,27 +2122,27 @@ button:visited {
 .beard-model--admiral label::after {
   width: 52px;
   height: 49px;
-  background-image: url(../../img/beard-admiral.png);
+  background-image: url(../img/beard-admiral.png);
 }
 .beard-model--lumberjack label::after {
   width: 58px;
   height: 68px;
-  background-image: url(../../img/beard-lumberjack.png);
+  background-image: url(../img/beard-lumberjack.png);
 }
 .beard-model--polar-explorer label::after {
   width: 64px;
   height: 78px;
-  background-image: url(../../img/beard-polar-explorer.png);
+  background-image: url(../img/beard-polar-explorer.png);
 }
 .beard-model--boyar label::after {
   width: 58px;
   height: 98px;
-  background-image: url(../../img/beard-boyar.png);
+  background-image: url(../img/beard-boyar.png);
 }
 .beard-model--sage label::after {
   width: 46px;
   height: 105px;
-  background-image: url(../../img/beard-sage.png);
+  background-image: url(../img/beard-sage.png);
 }
 @media (min-width: 768px) {
   .beard-model__title {
@@ -2248,7 +2248,7 @@ button:visited {
   left: 6px;
   width: 22px;
   height: 16px;
-  background-image: url(../../img/checkbox.png);
+  background-image: url(../img/checkbox.png);
   background-repeat: no-repeat;
 }
 .recording__button--submit {
