--- a/less/recording/add-services.less
+++ b/less/recording/add-services.less
@@ -68,7 +68,7 @@
     left: 6px;
     width: 22px;
     height: 16px;
-    background-image: url(../../img/checkbox.png);
+    background-image: url(../img/checkbox.png);
     background-repeat: no-repeat;
 }
 
