--- a/less/recording/beard-model.less
+++ b/less/recording/beard-model.less
@@ -93,31 +93,31 @@
 .beard-model--admiral label::after {
     width: 52px;
     height: 49px;
-    background-image: url(../../img/beard-admiral.png);
+    background-image: url(../img/beard-admiral.png);
 }
 
 .beard-model--lumberjack label::after {
     width: 58px;
     height: 68px;
-    background-image: url(../../img/beard-lumberjack.png);
+    background-image: url(../img/beard-lumberjack.png);
 }
 
 .beard-model--polar-explorer label::after {
     width: 64px;
     height: 78px;
-    background-image: url(../../img/beard-polar-explorer.png);
+    background-image: url(../img/beard-polar-explorer.png);
 }
 
 .beard-model--boyar label::after {
     width: 58px;
     height: 98px;
-    background-image: url(../../img/beard-boyar.png);
+    background-image: url(../img/beard-boyar.png);
 }
 
 .beard-model--sage label::after {
     width: 46px;
     height: 105px;
-    background-image: url(../../img/beard-sage.png);
+    background-image: url(../img/beard-sage.png);
 }
 
 @media (min-width: @tablet-width) {
