--- a/css/price-list.css
+++ b/css/price-list.css
@@ -49,7 +49,7 @@
   width: 58px;
   height: 57px;
   transform: translateY(-50%);
-  background-image: url("../../img/clock.png");
+  background-image: url("../img/clock.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
