--- a/less/our-works/photogallery.less
+++ b/less/our-works/photogallery.less
@@ -137,7 +137,7 @@
 .service-haircut::before {
     width: 21px;
     height: 20px;
-    background-image: url(../../img/service-haircut.png);
+    background-image: url(../img/service-haircut.png);
     left: 0;
     top: 50%;
     transform: translateY(-50%);
@@ -146,7 +146,7 @@
 .service-shaving::before {
     width: 23px;
     height: 20px;
-    background-image: url(../../img/service-shaving.png);
+    background-image: url(../img/service-shaving.png);
     left: 0px;
     top: 50%;
     transform: translateY(-50%);
@@ -155,7 +155,7 @@
 .service-mustache::before {
     width: 45px;
     height: 12px;
-    background-image: url(../../img/service-mustache.png);
+    background-image: url(../img/service-mustache.png);
     left: -12px;
     top: 50%;
     transform: translateY(-50%);
@@ -246,7 +246,7 @@
     }
 
     .photogallery__work-of-the-month {
-        background-image: url(../../img/label-desktop.png);
+        background-image: url(../img/label-desktop.png);
         top: 25px;
         right: -480px;
     }
