--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 @font-face {
   font-family: "PT Sans Narrow";
-  src: url("../fonts/ptsansnarrow.woff2") format("woff2"), url("../fonts/ptsansnarrow.woff") format("woff");
+  font-display: swap;
   font-weight: normal;
+  src: url("../fonts/ptsansnarrow.woff2") format("woff2"), url("../fonts/ptsansnarrow.woff") format("woff");
 }
 @font-face {
   font-family: "PT Sans Narrow";
-  src: url("../fonts/ptsansnarrowbold.woff2") format("woff2"), url("../fonts/ptsansnarrowbold.woff") format("woff");
+  font-display: swap;
   font-weight: bold;
+  src: url("../fonts/ptsansnarrowbold.woff2") format("woff2"), url("../fonts/ptsansnarrowbold.woff") format("woff");
 }
 body {
   min-width: 320px;
